[tool.poetry]
name = "firebase-auth-dropin"
version = "0.1.0"
description = "Firebase auth functions I keep rewriting for my web dev projects"
authors = ["anand2312 <anandkrishna2312@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.8"
firebase-admin = "^5.0.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
